--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "googlemaps",
+  "name": "@convoy/googlemaps",
   "version": "1.4.0",
   "main": "lib/index",
   "description": "A simple way to query the Google Maps API from Node.js",
